--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,70 @@
-body {
+body,
+html {
+    margin: 0;
+    padding: 0;
     width: 100vw;
     height: 100vh;
+    background-color: white;
 }
 
-header {
+nav {
     width: 100vw;
-    height: 5vh;
-    background-color: antiquewhite;
+    height: 8vh;
+    background-color: white;
+    position: fixed;
+}
+
+nav div {
+    height: 100%;
+    width: 100%;
+    margin-left: 26vw;
+    display: flex;
+    flex-direction: row;
+}
+
+
+nav ul {
+    height: 100%;
+    width: 10vw;
+    margin-top: 0;
+    display: flex;
+    list-style: none;
+    align-items: center;
+    justify-content:left;
+}
+
+
+main {
+    width: 100vw;
+    height: 90vh;
+    background-color: #3b3838;
+}
+
+#left-section {
+    width: 30vw;
+    height: 94vh;
+    position: absolute;
+    background-color: #c00000;
+    margin-top: 3vh;
+    margin-left: 3vh;
+    text-align: center;
+    border-radius: 2px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    
+}
+
+
+#logo {
+    width: 90%;
+    height: auto;
+    margin-top: 3vh;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+footer {
+    nav {
+        width: 100vw;
+        height: 8vh;
+        background-color: white;
+    }
 }
