--- a/css/styles.css
+++ b/css/styles.css
@@ -1,115 +1,135 @@
 body,
 html {
+    display: block;
+    margin: 0;
+    padding: 0;
+}
+
+header,
+footer {
+    align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.4) 1px 2px 4px, rgba(0, 0, 0, 0.3) 1px 7px 13px -3px, rgba(0, 0, 0, 0.2) 1px -3px 1px inset;
+    display: flex;
+    height: 5vh;
+    justify-content: flex-end;
     margin: 0;
     padding: 0;
     width: 100vw;
-    height: 100vh;
-    background-color: white;
 }
 
-nav {
-    width: 100vw;
-    height: 8vh;
-    background-color: white;
-    position: fixed;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 1.8vw;
-}
-
-nav div {
-    height: 100%;
-    width: 70vw;
-    margin-left: 26vw;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-
-}
-
-
-nav ul {
-    height: 100%;
-    width: 10vw;
-    margin-top: 0;
-    padding-left: 8vw;
-    display: flex;
+header nav ul {
     list-style: none;
-    align-items: center;
-    justify-content: space-evenly;
 }
 
-
-
-main {
-    width: 100vw;
-    height: 92vh;
-    background-color: #3b3838;
-}
-
-#left_section {
-    width: 30vw;
-    height: 92vh;
-    position: absolute;
-    background-color: #c00000;
-    margin-top: 4vh;
-    margin-left: 4vh;
-    text-align: center;
-    border-radius: 2px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    position: fixed;
-}
-
-
-#left_section #logo {
-    width: 90%;
-    height: auto;
-    margin-top: 3vh;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
-
-#right_section {
-    width: 69vw;
-    height: 92vh;
-    float: right;
-}
-
-#right_section article {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 92%;
-    align-items: center;
-    justify-content:center;
-    margin-top: 8vh;
-    
-
-}
-
-#right_section img {
-    width: 92%;
-    height: 88%;
-    margin: 5vh 2vh 6vh 4vh;
-    border: solid 3px #ffffff;
-    border-radius: 2px;
+header nav ul a {
+    color: black;
+    font-family: sans-serif;
+    font-size: 1.8vw;
+    padding: 5vw;
+    text-decoration: none;
 }
 
 footer {
-        width: 100vw;
-        height: 8vh;
-        background-color: white;
-        font-family: Georgia, 'Times New Roman', Times, serif;
-        font-size: 1.2vw;
+    box-shadow: rgba(0, 0, 0, 0.4) 4px 2px 1px, rgba(0, 0, 0, 0.3) 13px 7px 1px 3px, rgba(0, 0, 0, 0.2) 1px 4px 1px inset;
+    height: 4vh;
+}
+
+main {
+    align-items: center;
+    background-color: #3b3838;
+    display: flex;
+    height: 91vh;
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+}
+
+
+.left-div {
+    background-color: red;
+    border-radius: .3vh;
+    box-shadow: rgba(0, 0, 0, 0.4) 1px 2px 4px, rgba(0, 0, 0, 0.3) 1px 7px 13px -3px, rgba(0, 0, 0, 0.2) 1px -3px 1px inset;
+    display: flex;
+    height: 95vh;
+    margin: 2vh 1vh 2vh 2vh;
+    width: 25vw;
+}
+
+.img-container {
+    height: 100%;
+    width: 100%;
 
 }
 
-footer h4 {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    text-align: center;
+.left-div img {
+    border-radius: .3vh;
+    box-shadow: rgba(0, 0, 0, 0.4) 1px 2px 4px, rgba(0, 0, 0, 0.3) 1px 7px 13px -3px, rgba(0, 0, 0, 0.2) 1px -3px 1px inset;
+    height: auto;
+    margin: 4%;
+    width: 92%;
+
+}
+
+.right-div {
+    border-radius: .3vh;
     display: flex;
+    flex-direction: column;
+    float: right;
+    height: 95%;
+    margin: 2vh 2vh 2vh 1vh;
+    width: 75vw;
+}
+
+.grid-container {
+    border-radius: .3vh;
+    display: grid;
+    grid-column-gap: 2vh;
+    grid-row-gap: 2vh;
+    grid-template-columns: auto auto;
+    height: 100%;
+
+}
+
+.grid-container > div {
+    background-color: #3b3838;
+    border-radius: .3vh;
+    font-size: 30px;
+    padding: 20px 0;
+    text-align: center;
+}
+
+.item1,
+.item2,
+.item3,
+.item4 {
     align-items: center;
+    border: solid white 6px;
+    box-shadow: rgba(0, 0, 0, 0.4) 1px 2px 4px, rgba(0, 0, 0, 0.3) 1px 7px 13px -3px, rgba(0, 0, 0, 0.2) 1px -3px 1px inset;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
 
+}
+
+.img-container-section,
+.img-container-section,
+.img-container-section,
+.img-container-section {
+    align-items: center;
+    display: flex;
+    height: 100%;
+    width: 100%;
+    background-color: aqua;
+
+}
+
+.img-container-section img,
+.img-container-section img,
+.img-container-section img,
+.img-container-section img {
+    display: flex;
+    height: 100%;
+    max-height: 100%;
+    max-width: 100%;
+    background-color: bisque;
 }
