--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+
+
+
 body,
 html {
     display: block;
@@ -104,32 +107,16 @@ main {
 .item4 {
     align-items: center;
     border: solid white 6px;
+    border-radius: .3vh;
     box-shadow: rgba(0, 0, 0, 0.4) 1px 2px 4px, rgba(0, 0, 0, 0.3) 1px 7px 13px -3px, rgba(0, 0, 0, 0.2) 1px -3px 1px inset;
     display: flex;
     flex-direction: column;
     justify-content: center;
-
 }
 
-.img-container-section,
-.img-container-section,
-.img-container-section,
-.img-container-section {
-    align-items: center;
-    display: flex;
+.grid-img-container {
     height: 100%;
     width: 100%;
-    background-color: aqua;
-
 }
 
-.img-container-section img,
-.img-container-section img,
-.img-container-section img,
-.img-container-section img {
-    display: flex;
-    height: 100%;
-    max-height: 100%;
-    max-width: 100%;
-    background-color: bisque;
-}
+.grid-img-container img {}
