--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,10 @@ header nav ul {
     list-style: none;
 }
 
+header nav ul: hover {
+    background-color: #c00000;
+}
+
 header nav ul a {
     color: black;
     font-family: sans-serif;
