--- a/styles.css
+++ b/styles.css
@@ -24,9 +24,6 @@ header nav ul {
     list-style: none;
 }
 
-header nav ul:hover {
-    background-color: #c00000;
-}
 
 header nav ul a {
     color: black;
@@ -34,6 +31,11 @@ header nav ul a {
     font-size: 1.8vw;
     padding: 5vw;
     text-decoration: none;
+}
+
+
+header nav ul a:hover {
+    background-color: #c00000;
 }
 
 footer {
