--- a/styles.css
+++ b/styles.css
@@ -14,31 +14,44 @@ footer {
     box-shadow: rgba(0, 0, 0, 0.4) 1px 2px 4px, rgba(0, 0, 0, 0.3) 1px 7px 13px -3px, rgba(0, 0, 0, 0.2) 1px -3px 1px inset;
     display: flex;
     height: 5vh;
-    justify-content: flex-end;
+    justify-content: end;
     margin: 0;
     padding: 0;
     width: 100vw;
 }
 
 header nav ul {
+    display: flex;
+    justify-content: end;
     list-style: none;
+    margin-right: 2.5vw;
+    width: 70VW;
+}
+
+header nav ul li {
+    width: 25%;
 }
 
 
 header nav ul a {
-    border-radius: 5vh;
+    border-radius: 1vh;
     color: black;
+    display: block;
     font-family: sans-serif;
     font-size: 1.8vw;
-    padding-left: 5vw;
-    padding-right: 5vw;
+    text-align: center;
     text-decoration: none;
+    width: 100%;
 }
 
 
 header nav ul a:hover {
     background-color: #c00000;
-    border-radius: 5vh;
+    border-radius: 1vh;
+}
+
+header nav ul a:active {
+    color: #ffffff;
 }
 
 footer {
