--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ footer {
 
 header nav ul {
     display: flex;
+    flex-direction: row;
     justify-content: end;
     list-style: none;
     margin-right: 2.5vw;
