--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,3 @@
-
-
-
 body,
 html {
     display: block;
@@ -14,7 +11,7 @@ footer {
     box-shadow: rgba(0, 0, 0, 0.4) 1px 2px 4px, rgba(0, 0, 0, 0.3) 1px 7px 13px -3px, rgba(0, 0, 0, 0.2) 1px -3px 1px inset;
     display: flex;
     height: 5vh;
-    justify-content: end;
+    justify-content: flex-end;
     margin: 0;
     padding: 0;
     width: 100vw;
@@ -23,7 +20,7 @@ footer {
 header nav ul {
     display: flex;
     flex-direction: row;
-    justify-content: end;
+    justify-content: flex-end;
     list-style: none;
     margin-right: 2.5vw;
     width: 70VW;
@@ -35,7 +32,7 @@ header nav ul li {
 
 
 header nav ul a {
-    border-radius: 1vh;
+    border-radius: .5vh;
     color: black;
     display: block;
     font-family: sans-serif;
@@ -48,7 +45,7 @@ header nav ul a {
 
 header nav ul a:hover {
     background-color: #c00000;
-    border-radius: 1vh;
+    border-radius: .5vh;
 }
 
 header nav ul a:active {
@@ -72,7 +69,7 @@ main {
 
 
 .left-div {
-    background-color: red;
+    background-color: #c00000;
     border-radius: .3vh;
     box-shadow: rgba(0, 0, 0, 0.4) 1px 2px 4px, rgba(0, 0, 0, 0.3) 1px 7px 13px -3px, rgba(0, 0, 0, 0.2) 1px -3px 1px inset;
     display: flex;
@@ -129,7 +126,7 @@ main {
 .item3,
 .item4 {
     align-items: center;
-    border: solid white 6px;
+    border: solid #ffffff 6px;
     border-radius: .3vh;
     box-shadow: rgba(0, 0, 0, 0.4) 1px 2px 4px, rgba(0, 0, 0, 0.3) 1px 7px 13px -3px, rgba(0, 0, 0, 0.2) 1px -3px 1px inset;
     display: flex;
