--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ header nav ul a {
 
 
 header nav ul a:hover {
-    background-color: red;
+    background-color: #eb1c24;
     border-radius: .5vh;
 }
 
@@ -59,7 +59,7 @@ footer {
 
 main {
     align-items: center;
-    background-color: red;
+    background-color: #3b3838;
     display: flex;
     height: 91vh;
     margin: 0;
@@ -69,7 +69,7 @@ main {
 
 
 .left-div {
-    background-color: #c00001;
+    background-color: #eb1c24;
     border-radius: .3vh;
     box-shadow: rgba(0, 0, 0, 0.4) 1px 2px 4px, rgba(0, 0, 0, 0.3) 1px 7px 13px -3px, rgba(0, 0, 0, 0.2) 1px -3px 1px inset;
     display: flex;
