--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@ footer {
     align-items: center;
     box-shadow: rgba(0, 0, 0, 0.4) 1px 2px 4px, rgba(0, 0, 0, 0.3) 1px 7px 13px -3px, rgba(0, 0, 0, 0.2) 1px -3px 1px inset;
     display: flex;
+    font-family: Lato, sans-serif;
+    font-size: 2vh;
+    font-style: normal;
+    font-weight: 400;
     height: 5vh;
     justify-content: flex-end;
     margin: 0;
@@ -55,6 +59,17 @@ header nav ul a:active {
 footer {
     box-shadow: rgba(0, 0, 0, 0.4) 4px 2px 1px, rgba(0, 0, 0, 0.3) 13px 7px 1px 3px, rgba(0, 0, 0, 0.2) 1px 4px 1px inset;
     height: 4vh;
+    justify-content: center;
+
+}
+
+footer h5 {
+    font-family: Lato,
+        sans-serif;
+    font-size: 1.4vh;
+    font-style: normal;
+    font-weight: 400;
+    margin-left: 26vw;
 }
 
 main {
