--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ footer {
 
 }
 
-footer h5 {
+h5 {
     font-family: Lato,
         sans-serif;
     font-size: 1.4vh;
@@ -77,7 +77,7 @@ main {
     background-color: #3b3838;
     display: flex;
     height: 91vh;
-    margin: 0;
+    margin: auto;
     padding: 0;
     width: 100vw;
 }
@@ -109,47 +109,80 @@ main {
 }
 
 .right-div {
+    background-color: #ffffff;
     border-radius: .3vh;
     display: flex;
     flex-direction: column;
-    float: right;
-    height: 95%;
-    margin: 2vh 2vh 2vh 1vh;
-    width: 75vw;
+    font-family: Lato, sans-serif;
+    font-size: 2vh;
+    height: 96%;
+    margin: 0.1vh 2vh 0.1vh 1vh;
+    width: 80vw;
 }
 
-.grid-container {
-    border-radius: .3vh;
-    display: grid;
-    grid-column-gap: 2vh;
-    grid-row-gap: 2vh;
-    grid-template-columns: auto auto;
+.right-top,
+.right-bottom {
+    display: flex;
+    height: 50%;
+    width: 100%;
+}
+
+.left-top-container,
+.right-top-container,
+.left-bottom-container,
+.right-bottom-container {
+    background-color: black;
+    height: 100;
+    width: 100%;
+}
+
+
+.left-top-container {
+    margin: 0.5vh .25vh .25vh .5vh;
+}
+
+.right-top-container {
+    margin: 0.5vh .5vh .25vh .25vh;
+}
+
+.left-bottom-container {
+    margin: 0.25vh .25vh .5vh .5vh;
+}
+
+.right-bottom-container {
+    margin: 0.25vh .5vh .5vh .25vh;
+}
+
+.a-image-container {
+    width: 100%;
+    height: 90%;
+}
+
+.a-image-container img {
+    width: 100%;
     height: 100%;
-
 }
 
-.grid-container div {
-    background-color: #3b3838;
-    border-radius: .3vh;
-    font-size: 30px;
-    padding: 20px 0;
-    text-align: center;
-}
-
-.item1,
-.item2,
-.item3,
-.item4 {
+.label-container {
     align-items: center;
-    border: solid #ffffff 6px;
-    border-radius: .3vh;
-    box-shadow: rgba(0, 0, 0, 0.4) 1px 2px 4px, rgba(0, 0, 0, 0.3) 1px 7px 13px -3px, rgba(0, 0, 0, 0.2) 1px -3px 1px inset;
+    background-color: #ffffff;
     display: flex;
-    flex-direction: column;
+    height: 10%;
     justify-content: center;
+    width: 100%;
+
 }
 
-.grid-img-container {
+h2 {
+    align-items: center;
+    display: flex;
+    font-family: Lato, sans-serif;
+    font-size: 2vh;
+    font-style: normal;
+    font-weight: 100;
     height: 100%;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
     width: 100%;
 }
