--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ html {
 header,
 footer {
     align-items: center;
-    box-shadow: rgba(0, 0, 0, 0.4) 1px 2px 4px, rgba(0, 0, 0, 0.3) 1px 7px 13px -3px, rgba(0, 0, 0, 0.2) 1px -3px 1px inset;
+    box-shadow: #00000066 1px 2px 4px, #0000004d 1px 7px 13px -3px, #00000033 1px -3px 1px inset;
     display: flex;
     font-family: Lato, sans-serif;
     font-size: 2vh;
@@ -27,7 +27,7 @@ header nav ul {
     justify-content: flex-end;
     list-style: none;
     margin-right: 2.5vw;
-    width: 70VW;
+    width: 76VW;
 }
 
 header nav ul li {
@@ -57,7 +57,7 @@ header nav ul a:active {
 }
 
 footer {
-    box-shadow: rgba(0, 0, 0, 0.4) 4px 2px 1px, rgba(0, 0, 0, 0.3) 13px 7px 1px 3px, rgba(0, 0, 0, 0.2) 1px 4px 1px inset;
+    box-shadow: #00000066 1px 2px 4px, #0000004d 1px 7px 13px -3px, #00000033 1px -3px 1px inset;
     height: 4vh;
     justify-content: center;
 
@@ -69,12 +69,12 @@ h5 {
     font-size: 1.4vh;
     font-style: normal;
     font-weight: 400;
-    margin-left: 26vw;
+    margin-left: 20vw;
 }
 
 main {
     align-items: center;
-    background-color: #3b3838;
+    background-color: #1f2324;
     display: flex;
     height: 91vh;
     margin: auto;
@@ -86,10 +86,10 @@ main {
 .left-div {
     background-color: #eb1c24;
     border-radius: .3vh;
-    box-shadow: rgba(0, 0, 0, 0.4) 1px 2px 4px, rgba(0, 0, 0, 0.3) 1px 7px 13px -3px, rgba(0, 0, 0, 0.2) 1px -3px 1px inset;
+    box-shadow: #00000066 1px 2px 4px, #0000004d 1px 7px 13px -3px, #00000033 1px -3px 1px inset;
     display: flex;
     height: 95vh;
-    margin: 2vh 1vh 2vh 2vh;
+    margin: 2vh 0vh 2vh 2vh;
     width: 25vw;
 }
 
@@ -101,7 +101,7 @@ main {
 
 .left-div img {
     border-radius: .3vh;
-    box-shadow: rgba(0, 0, 0, 0.4) 1px 2px 4px, rgba(0, 0, 0, 0.3) 1px 7px 13px -3px, rgba(0, 0, 0, 0.2) 1px -3px 1px inset;
+    box-shadow: #00000066 1px 2px 4px, #0000004d 1px 7px 13px -3px, #00000033 1px -3px 1px inset;
     height: auto;
     margin: 4%;
     width: 92%;
@@ -110,14 +110,14 @@ main {
 
 .right-div {
     background-color: #ffffff;
+    background-color: #1f2324;
     border-radius: .3vh;
     display: flex;
     flex-direction: column;
     font-family: Lato, sans-serif;
     font-size: 2vh;
-    height: 96%;
-    margin: 0.1vh 2vh 0.1vh 1vh;
-    width: 80vw;
+    height: 100%;
+    width: 110vw;
 }
 
 .right-top,
@@ -131,41 +131,46 @@ main {
 .right-top-container,
 .left-bottom-container,
 .right-bottom-container {
-    background-color: black;
     height: 100;
     width: 100%;
 }
 
 
 .left-top-container {
-    margin: 0.5vh .25vh .25vh .5vh;
+    margin: 2vh 1vh 1vh 2vh;
 }
 
 .right-top-container {
-    margin: 0.5vh .5vh .25vh .25vh;
+    margin: 2vh 2vh 1vh 1vh;
 }
 
 .left-bottom-container {
-    margin: 0.25vh .25vh .5vh .5vh;
+    margin: 1vh 1vh 2vh 2vh;
 }
 
 .right-bottom-container {
-    margin: 0.25vh .5vh .5vh .25vh;
+    margin: 1vh 2vh 2vh 1vh;
 }
 
 .a-image-container {
-    width: 100%;
+    border-radius: .5vh;
+    box-shadow: #00000066 1px 2px 4px, #0000004d 1px 7px 13px -3px, #00000033 1px -3px 1px inset;
     height: 90%;
+    width: 100%;
+
 }
 
 .a-image-container img {
-    width: 100%;
+    border-radius: .5vh;
+    box-shadow: #00000066 1px 2px 4px, #0000004d 1px 7px 13px -3px, #00000033 1px -3px 1px inset;
     height: 100%;
+    width: 100%;
+
 }
 
 .label-container {
     align-items: center;
-    background-color: #ffffff;
+    background-color: #1f2324;
     display: flex;
     height: 10%;
     justify-content: center;
@@ -174,15 +179,15 @@ main {
 }
 
 h2 {
-    align-items: center;
+    align-items: flex-end;
+    color: #ffffff;
     display: flex;
     font-family: Lato, sans-serif;
     font-size: 2vh;
     font-style: normal;
-    font-weight: 100;
+    font-weight: 400;
     height: 100%;
     justify-content: center;
     margin: 0;
-    padding: 0;
     width: 100%;
 }
