--- a/styles.css
+++ b/styles.css
@@ -1,193 +1,232 @@
-body,
-html {
+body {
+    background-color: #ffffff;
     display: block;
-    margin: 0;
-    padding: 0;
-}
-
-header,
-footer {
-    align-items: center;
-    box-shadow: #00000066 1px 2px 4px, #0000004d 1px 7px 13px -3px, #00000033 1px -3px 1px inset;
-    display: flex;
     font-family: Lato, sans-serif;
-    font-size: 2vh;
+    font-size: 1vh;
     font-style: normal;
-    font-weight: 400;
-    height: 5vh;
-    justify-content: flex-end;
+    font-weight: 200;
+    margin: 0;
+    overflow-x: hidden;
+    padding: 0;
+}
+
+
+.site-header-container {
+    box-shadow: rgba(0, 0, 0, 0.35) 0.01px 5px 15px;
+    display: flex;
+    height: 6vh;
+    line-height: 1.5em;
+    position: fixed;
+    width: 99.6vw;
+    z-index: 1040;
+}
+
+
+.site-header-content {
+    background-color: #ffffff;
+    border-radius: 5px;
+    height: 100%;
+    width: 100%;
+}
+
+.site-header {
+    align-items: center;
+    display: flex;
+    height: 100%;
+    width: 100%;
+
+}
+
+.logo-container {
+    align-items: center;
+    display: flex;
+    height: 70%;
+    margin-left: 1vh;
+    width: 30%;
+}
+
+.logo-container a {
+    height: 100%;
+    width: auto;
+}
+
+.logo-container img {
+    height: 100%;
+    width: auto;
+}
+
+.nav-container {
+    height: 100%;
+    width: 100%;
+}
+
+
+.site-header ul {
+    align-items: center;
+    display: flex;
+    height: 100%;
+    justify-content: space-between;
+    list-style: none;
     margin: 0;
     padding: 0;
-    width: 100vw;
+    width: 100%;
+
 }
 
-header nav ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    list-style: none;
-    margin-right: 2.5vw;
-    width: 76VW;
-}
-
-header nav ul li {
+.site-header li {
+    height: 100%;
     width: 25%;
 }
 
 
-header nav ul a {
-    border-radius: .5vh;
-    color: black;
-    display: block;
-    font-family: sans-serif;
-    font-size: 1.8vw;
-    text-align: center;
+.site-header li a {
+    align-items: center;
+
+    color: #000000;
+    display: flex;
+    font-size: 3.4vh;
+    height: 100%;
+    justify-content: center;
     text-decoration: none;
     width: 100%;
 }
 
 
-header nav ul a:hover {
-    background-color: #eb1c24;
-    border-radius: .5vh;
-}
-
-header nav ul a:active {
+.site-header li a:hover {
+    background-color: #1f2324;
+    border-radius: 5px;
     color: #ffffff;
 }
 
-footer {
-    box-shadow: #00000066 1px 2px 4px, #0000004d 1px 7px 13px -3px, #00000033 1px -3px 1px inset;
-    height: 4vh;
-    justify-content: center;
 
-}
-
-h5 {
-    font-family: Lato,
-        sans-serif;
-    font-size: 1.4vh;
-    font-style: normal;
-    font-weight: 400;
-    margin-left: 20vw;
-}
-
-main {
-    align-items: center;
-    background-color: #1f2324;
-    display: flex;
-    height: 91vh;
-    margin: auto;
-    padding: 0;
-    width: 100vw;
-}
-
-
-.left-div {
-    background-color: #eb1c24;
-    border-radius: .3vh;
-    box-shadow: #00000066 1px 2px 4px, #0000004d 1px 7px 13px -3px, #00000033 1px -3px 1px inset;
-    display: flex;
-    height: 95vh;
-    margin: 2vh 0vh 2vh 2vh;
-    width: 25vw;
-}
-
-.img-container {
-    height: 100%;
-    width: 100%;
-
-}
-
-.left-div img {
-    border-radius: .3vh;
-    box-shadow: #00000066 1px 2px 4px, #0000004d 1px 7px 13px -3px, #00000033 1px -3px 1px inset;
-    height: auto;
-    margin: 4%;
-    width: 92%;
-
-}
-
-.right-div {
-    background-color: #ffffff;
-    background-color: #1f2324;
-    border-radius: .3vh;
+.section-container {
     display: flex;
     flex-direction: column;
-    font-family: Lato, sans-serif;
-    font-size: 2vh;
-    height: 100%;
-    width: 110vw;
+    height: 100vh;
+    overflow: hidden;
+    width: 99.6vw;
 }
 
-.right-top,
-.right-bottom {
+.image-container {
+    height: 70%;
+    max-height: 70%;
+    width: 100%;
+}
+
+.image-container img {
     display: flex;
+    height: 100%;
+    object-fit: cover;
+    width: 100%;
+}
+
+.spacer {
+    align-items: center;
+    background-color: #1f2324;
+    color: #ffffff;
+    display: flex;
+    font-size: 1.6vh;
+    height: 5%;
+    justify-content: center;
+    width: 100%;
+}
+
+.welcome-message {
+    font-family: Lato, sans-serif;
+    font-weight: 100;
+}
+
+
+.image-container-spacer {
+    height: 4vh;
+    width: 100%;
+}
+
+.section-messages-container {
+    align-items: center;
+    display: flex;
+    height: 30vh;
+    justify-content: center;
+    width: 100%;
+}
+
+.section-message {
+    display: flex;
+    height: 100%;
+    width: 100%;
+}
+
+
+.section-message div {
+    width: 25%;
+
+}
+
+.message-1 {
+    background-color: #6d5c4e;
+    padding-top: 2vh;
+
+
+
+}
+
+.message-2 {
+    background-color: #5d688f;
+    padding-top: 2vh;
+
+}
+
+.message-3 {
+    background-color: #a8a09e;
+    padding-top: 2vh;
+
+}
+
+.message-4 {
+    background-color: #7b8530;
+    padding-top: 2vh;
+
+}
+
+.message-1 div,
+.message-2 div,
+.message-3 div,
+.message-4 div {
     height: 50%;
     width: 100%;
 }
 
-.left-top-container,
-.right-top-container,
-.left-bottom-container,
-.right-bottom-container {
-    height: 100;
-    width: 100%;
-}
-
-
-.left-top-container {
-    margin: 2vh 1vh 1vh 2vh;
-}
-
-.right-top-container {
-    margin: 2vh 2vh 1vh 1vh;
-}
-
-.left-bottom-container {
-    margin: 1vh 1vh 2vh 2vh;
-}
-
-.right-bottom-container {
-    margin: 1vh 2vh 2vh 1vh;
-}
-
-.a-image-container {
-    border-radius: .5vh;
-    box-shadow: #00000066 1px 2px 4px, #0000004d 1px 7px 13px -3px, #00000033 1px -3px 1px inset;
-    height: 90%;
-    width: 100%;
-
-}
-
-.a-image-container img {
-    border-radius: .5vh;
-    box-shadow: #00000066 1px 2px 4px, #0000004d 1px 7px 13px -3px, #00000033 1px -3px 1px inset;
-    height: 100%;
-    width: 100%;
-
-}
-
-.label-container {
+.message-divider {
     align-items: center;
-    background-color: #1f2324;
     display: flex;
-    height: 10%;
+    font-size: 4vh;
+    height: 50%;
     justify-content: center;
     width: 100%;
 
 }
 
-h2 {
-    align-items: flex-end;
+sl-icon {
+    border: 3px solid black;
+    border-radius: 25px;
+    height: 6vh;
+    margin-top: 4vh;
+    padding: 5px;
+    width: 6vh;
+}
+
+
+
+
+footer {
+    align-items: center;
+    background-color: #000000;
+    bottom: 0;
     color: #ffffff;
     display: flex;
     font-family: Lato, sans-serif;
-    font-size: 2vh;
-    font-style: normal;
-    font-weight: 400;
-    height: 100%;
+    font-size: 1.6vh;
+    height: 4vh;
     justify-content: center;
-    margin: 0;
     width: 100%;
 }
