--- a/css/style.css
+++ b/css/style.css
@@ -1,232 +1,194 @@
-body {
-    background-color: #ffffff;
-    display: block;
-    font-family: Lato, sans-serif;
-    font-size: 1vh;
-    font-style: normal;
-    font-weight: 200;
-    margin: 0;
-    overflow-x: hidden;
-    padding: 0;
+body, 
+main {
+  display: block;
+  margin: 0;
+  padding: 0;
 }
 
-
-.site-header-container {
-    box-shadow: rgba(0, 0, 0, 0.35) 0.01px 5px 15px;
-    display: flex;
-    height: 6vh;
-    line-height: 1.5em;
-    position: fixed;
-    width: 99.6vw;
-    z-index: 1040;
+main {
+  height: calc(100vh - 8vh);
+  width: 100vw;
 }
 
-
-.site-header-content {
-    background-color: #ffffff;
-    border-radius: 5px;
-    height: 100%;
-    width: 100%;
+header,
+footer {
+  height: 4vh;
+  width: 100vw;
 }
 
-.site-header {
-    align-items: center;
-    display: flex;
-    height: 100%;
-    width: 100%;
-
+header {
+  background-color: red;
 }
-
-.logo-container {
-    align-items: center;
-    display: flex;
-    height: 70%;
-    margin-left: 1vh;
-    width: 30%;
-}
-
-.logo-container a {
-    height: 100%;
-    width: auto;
-}
-
-.logo-container img {
-    height: 100%;
-    width: auto;
-}
-
-.nav-container {
-    height: 100%;
-    width: 100%;
-}
-
-
-.site-header ul {
-    align-items: center;
-    display: flex;
-    height: 100%;
-    justify-content: space-between;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-
-}
-
-.site-header li {
-    height: 100%;
-    width: 25%;
-}
-
-
-.site-header li a {
-    align-items: center;
-
-    color: #000000;
-    display: flex;
-    font-size: 3.4vh;
-    height: 100%;
-    justify-content: center;
-    text-decoration: none;
-    width: 100%;
-}
-
-
-.site-header li a:hover {
-    background-color: #1f2324;
-    border-radius: 5px;
-    color: #ffffff;
-}
-
-
-.section-container {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    overflow: hidden;
-    width: 99.6vw;
-}
-
-.image-container {
-    height: 70%;
-    max-height: 70%;
-    width: 100%;
-}
-
-.image-container img {
-    display: flex;
-    height: 100%;
-    object-fit: cover;
-    width: 100%;
-}
-
-.spacer {
-    align-items: center;
-    background-color: #1f2324;
-    color: #ffffff;
-    display: flex;
-    font-size: 1.6vh;
-    height: 5%;
-    justify-content: center;
-    width: 100%;
-}
-
-.welcome-message {
-    font-family: Lato, sans-serif;
-    font-weight: 100;
-}
-
-
-.image-container-spacer {
-    height: 4vh;
-    width: 100%;
-}
-
-.section-messages-container {
-    align-items: center;
-    display: flex;
-    height: 30vh;
-    justify-content: center;
-    width: 100%;
-}
-
-.section-message {
-    display: flex;
-    height: 100%;
-    width: 100%;
-}
-
-
-.section-message div {
-    width: 25%;
-
-}
-
-.message-1 {
-    background-color: #6d5c4e;
-    padding-top: 2vh;
-
-
-
-}
-
-.message-2 {
-    background-color: #5d688f;
-    padding-top: 2vh;
-
-}
-
-.message-3 {
-    background-color: #a8a09e;
-    padding-top: 2vh;
-
-}
-
-.message-4 {
-    background-color: #7b8530;
-    padding-top: 2vh;
-
-}
-
-.message-1 div,
-.message-2 div,
-.message-3 div,
-.message-4 div {
-    height: 50%;
-    width: 100%;
-}
-
-.message-divider {
-    align-items: center;
-    display: flex;
-    font-size: 4vh;
-    height: 50%;
-    justify-content: center;
-    width: 100%;
-
-}
-
-sl-icon {
-    border: 3px solid black;
-    border-radius: 25px;
-    height: 6vh;
-    margin-top: 4vh;
-    padding: 5px;
-    width: 6vh;
-}
-
-
-
 
 footer {
-    align-items: center;
-    background-color: #000000;
-    bottom: 0;
-    color: #ffffff;
-    display: flex;
-    font-family: Lato, sans-serif;
-    font-size: 1.6vh;
-    height: 4vh;
-    justify-content: center;
+  align-items: center;
+  background-color: black;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+}
+
+
+.nav { 
+  display: flex;
+  height: calc(100vh - 8vh);
+  width: 20vw;
+}
+
+.nav ul {
+  background-color: aqua;
+  margin: 0;
+}
+.desktop-hero-container {
+  height: calc(100vh - 8vh);
+  width:100vw
+}
+
+.desktop-hero-container img{
+  height: 100%;
+  width: 100%;
+}
+
+
+
+
+/* ************************** */
+/* ****                   *** */
+/* **** MOBILE - SETTINGS *** */
+/* ****                   *** */
+/* ************************** */
+@media only screen and (max-width: 360px) {
+  .mobile-hero-container {
+    display:flex;
+  }
+
+  .mobile-hero-container img {
+    height: 36vh;
     width: 100%;
+  }
+
+  .desktop-hero-container {
+    display: none;
+  }
+
+  .nav {
+    display: flex;
+    flex-direction: column;
+    height: calc(100vh - 36vh - 8vh);
+    width: 100vw;
+  }
+
+  .nav ul {
+    display: inherit;
+    flex-direction: inherit;
+    height: inherit;
+    padding: 0;
+    width: 100%;
+  }
+
+  .nav ul li{
+    display: flex;
+    flex-direction: inherit;
+    height: calc(100vh - 36vh - 8vh);
+    width: 100%;
+  }
+
+  .nav ul li a {
+    border: solid 1px #000000;
+    display: inherit;
+    align-items: center;
+    background-color: #2c3134;
+    color: #ffffff;
+    height: 20%;
+    justify-content: center;
+    text-decoration: none;
+  }
+  
+}
+
+
+
+/* ************************** */
+/* ****                   *** */
+/* **** TABLET - SETTINGS *** */
+/* ****                   *** */
+/* ************************** */
+
+
+@media screen and (max-width: 759px) and (min-width: 361px) {
+  
+  main {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .mobile-hero-container {
+    display: flex;
+    height: 36vh;
+    width: 100%;
+  }
+
+  .mobile-hero-container img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .desktop-hero-container {
+    display: none;
+  }
+
+  .nav {
+    display: flex;
+    flex-direction: column;
+    height: calc(100vh - 36vh - 8vh);
+    width: 100vw;
+  }
+
+  .nav ul {
+    display: inherit;
+    flex-direction: inherit;
+    height: inherit;
+    padding: 0;
+    width: 100%;
+  }
+
+  .nav ul li{
+    display: flex;
+    flex-direction: inherit;
+    height: calc(100vh - 36vh - 8vh);
+    width: 100%;
+  }
+
+  .nav ul li a {
+    border: solid 1px #000000;
+    display: inherit;
+    align-items: center;
+    background-color: #2c3134;
+    color: #ffffff;
+    height: 20%;
+    justify-content: center;
+    text-decoration: none;
+  }
+}  
+
+
+
+
+/* *************************** */
+/* ****                    *** */
+/* **** DESKTOP - SETTINGS *** */
+/* ****                    *** */
+/* *************************** */
+@media only screen and (min-width: 760px) {
+  main {
+    display: flex;
+  }
+
+  .mobile-hero-container {
+    display: none;
+  }
+
+  .desktop-hero-container {
+    display: flex;
+  }
 }
