added header message

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,10 @@ footer {
 }
 
 header {
+  align-items: center;
   background-color: red;
+  display: flex;
+  justify-content: center;
 }
 
 footer {
