--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ footer {
 
 header {
   align-items: center;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   background-color: red;
   display: flex;
   justify-content: center;
