add footer font size

--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ footer {
   color: #ffffff;
   display: flex;
   font-family: "Goldman", "Arial", "Helvetica", "sans-serif";
+  font-size: 2vh;
   justify-content: center;
 }
 
