--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@ footer {
   background-color: aqua;
   margin: 0;
 }
+
 .desktop-hero-container {
   height: calc(100vh - 8vh);
   width:100vw
@@ -118,6 +119,10 @@ footer {
     height: 20%;
     justify-content: center;
     text-decoration: none;
+  }
+
+  .nav ul li a:hover {
+    background-color: #000000;
   }
   
 }
