add video source sizeing

--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,11 @@ footer {
   width: 100%;
 }
 
+.desktop-hero-container video source{
+  height: 100%;
+  width: 100%;
+}
+
 /* ************************** */
 /* ****                   *** */
 /* **** MOBILE - SETTINGS *** */
