--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,17 @@ footer {
   width: 100vw
 }
 
+.desktop-hero-container video {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.desktop-hero-container video source{
+  width: 100%;
+  height: 100%;
+}
+
 
 
 /* ************************** */
