--- a/css/style.css
+++ b/css/style.css
@@ -68,16 +68,16 @@ footer {
   width: 100vw
 }
 
-.desktop-hero-container video {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-
-.desktop-hero-container video source{
-  width: 100%;
-  height: 100%;
-}
+.demoVideo {
+  position: fixed;
+  z-index: 20;
+  background-color: transparent;
+  min-width: 75%;
+  min-height: 75%;
+  margin-left: 10%;
+  top: 10%;
+  border: 1px white solid;
+  }
 
 
 
