--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ main {
 }
 
 main {
-  height: calc(100vh - 8vh);
+  height: calc(100vh - 9.3vh);
   width: 100vw;
 }
 
@@ -31,32 +31,43 @@ footer {
 header {
   align-items: center;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  background-color: red;
+  background-color: #ea2410;
   display: flex;
   justify-content: center;
 }
 
 footer {
   align-items: center;
-  background-color: black;
+  background-color: #000000;
   color: #ffffff;
   display: flex;
   font-family: "Goldman", "Arial", "Helvetica", "sans-serif";
   font-size: 1.6vh;
   justify-content: center;
+  padding-left:22vh ;
 }
 
 .nav {
   display: flex;
   font-family: "Goldman", "Arial", "Helvetica", "sans-serif";
   font-size: 2vh;
-  height: calc(100vh - 8vh);
+  height: calc(100vh - 9.3vh);
   width: 20vw;
 }
 
 .nav ul {
-  background-color: aqua;
   margin: 0;
+}
+
+.nav ul li a {
+  border: solid 1px #000000;
+  display: inherit;
+  align-items: center;
+  background-color: #2b282d;
+  color: #ffffff;
+  height: 20%;
+  justify-content: center;
+  text-decoration: none;
 }
 
 .nav ul li a:hover {
@@ -64,18 +75,26 @@ footer {
 }
 
 .desktop-hero-container {
-  height: calc(100vh - 8vh);
+  height: calc(100vh - 9.3vh);
   width: 100vw
 }
 
 .demoVideo {
-  position: fixed;
+  object-fit: cover;
   z-index: 20;
   background-color: transparent;
-  min-width: 100%;
-  min-height: 100%;
-  border: 1px white solid;
-  }
+  width: 100%;
+  height: calc(100vh - 9.3vh);
+}
+
+#audio-control {
+  cursor:pointer;
+  padding: 10px 20px;
+  background:#000;
+  color: #fff;
+  border-radius: 4px;
+  display: inline-block;
+}
 
 
 
@@ -101,7 +120,7 @@ footer {
   .nav {
     display: flex;
     flex-direction: column;
-    height: calc(100vh - 36vh - 8vh);
+    height: calc(100vh - 36vh - 9.3vh);
     width: 100vw;
   }
 
@@ -116,7 +135,7 @@ footer {
   .nav ul li {
     display: flex;
     flex-direction: inherit;
-    height: calc(100vh - 36vh - 8vh);
+    height: calc(100vh - 36vh - 9.3vh);
     width: 100%;
   }
 
@@ -164,7 +183,7 @@ footer {
   .nav {
     display: flex;
     flex-direction: column;
-    height: calc(100vh - 36vh - 8vh);
+    height: calc(100vh - 36vh - 9.3vh);
     width: 100vw;
   }
 
@@ -179,20 +198,11 @@ footer {
   .nav ul li {
     display: flex;
     flex-direction: inherit;
-    height: calc(100vh - 36vh - 8vh);
+    height: calc(100vh - 36vh - 9.3vh);
     width: 100%;
   }
 
-  .nav ul li a {
-    border: solid 1px #000000;
-    display: inherit;
-    align-items: center;
-    background-color: #2c3134;
-    color: #ffffff;
-    height: 20%;
-    justify-content: center;
-    text-decoration: none;
-  }
+
 }
 
 /* *************************** */
@@ -216,7 +226,7 @@ footer {
   .nav {
     display: flex;
     flex-direction: column;
-    height: calc(100vh - 8vh);
+    height: calc(100vh - 9.3vh);
     width: 30vw;
   }
 
@@ -231,7 +241,7 @@ footer {
   .nav ul li {
     display: flex;
     flex-direction: inherit;
-    height: calc(100vh - 8vh);
+    height: calc(100vh - 9.3vh);
     width: 100%;
   }
 
