--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ footer {
 }
 
 footer p {
-  margin-left: 27vw;
+  margin-left: 20vw;
 }
 
 .nav {
@@ -67,7 +67,7 @@ footer p {
   border: solid 1px #000000;
   display: inherit;
   align-items: center;
-  background-color: #2b282d;
+  background-color: #252225;
   color: #ffffff;
   height: 20%;
   justify-content: center;
@@ -83,7 +83,7 @@ footer p {
   width: 80vw
 }
 
-.video {
+iframe {
   object-fit:cover;
   z-index: 20;
   background-color: transparent;
@@ -220,7 +220,7 @@ footer p {
     display: flex;
     flex-direction: column;
     height: calc(100vh - 8vh);
-    width: 30vw;
+    width: 20vw;
   }
 
   .nav ul {
@@ -241,7 +241,6 @@ footer p {
   .nav ul li a {
     display: inherit;
     align-items: center;
-    background-color: #2c3134;
     color: #ffffff;
     height: 20%;
     justify-content: center;
