--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,7 @@ footer p {
   .mobile-hero-container img {
     height: 36vh;
     width: 100%;
+    object-fit:cover;
   }
 
   .desktop-hero-container {
@@ -142,7 +143,6 @@ footer p {
     justify-content: center;
     text-decoration: none;
   }
-
 }
 
 /* ************************** */
