--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ footer p {
   .nav {
     display: flex;
     flex-direction: column;
-    height: calc(100vh - 36vh - 8vh);
+    height: calc(100vh - 29vh);
     width: 100vw;
   }
 
@@ -133,7 +133,7 @@ footer p {
   .nav ul li {
     display: flex;
     flex-direction: inherit;
-    height: calc(100vh - 36vh - 3vh);
+    height: calc(100vh - 29vh);
     width: 100%;
   }
 
