--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ main {
 
 section {
   height: 100vh;
-  margin-right: 20vw;
+  margin-right: 0;
   width: calc(100vw - 20vw);
 }
 
@@ -46,11 +46,16 @@ nav {
   background-color: #000000;
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 4vh);
-  margin: 4vh 0 0 0;
+  height: calc(100vh - 8Svh);
   padding: 0;
   position: fixed;
+  top: 4vh;
   width: 20vw;
+  overflow: hidden;
+}
+
+.button-top {
+  margin: 0;
 }
 
 .main-menu {
@@ -95,11 +100,10 @@ nav {
   display: flex;
   flex-direction: row;
   height: 4vh;
-  margin-top: 0;
+  margin: 0;
   padding: 0;
   width: 20vw;
   z-index: 0;
-  border-top: solid white 2px;
 }
 
 
@@ -177,6 +181,16 @@ nav {
 .contactus {
   height: calc(100vh - 7.9vh);
   width: 99vw;
+}
+
+footer {
+  height: 4vh;
+  width: 100%;
+  background-color: #16171c;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  border-top: solid white 2px;
 }
 
 
