adjust social midia icon size

--- a/css/style.css
+++ b/css/style.css
@@ -243,7 +243,13 @@ footer {
   }
  
   .social-menu {
+    align-items: center;
+    justify-content: center;
     width: 100%;
+  }
+
+  .social-menu div i {
+    font-size: 5vw;
   }
 
 }
