--- a/css/styles.css
+++ b/css/styles.css
@@ -123,12 +123,12 @@ nav ul {
 }
 
 
-/* TODO: REMOVE BEFORE UPLOAD*/
+/* TODO: REMOVE BEFORE UPLOAD
 .msg-wrapper div,
 .tip-wrapper div {
     background-color: aqua;
 }
-
+*/
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
